--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>段落(p)</h2>
+    <h2 id="up">段落(p)</h2>
     <p>我是段落</p>
     <hr>
     <h2>標籤(span)</h2>
@@ -33,7 +33,34 @@
     <del>刪除標示</del><br>
     <mark>標註</mark>
     <hr>
-    
-
+    <h2>超連結(a)</h2>
+    <a href="https://www.google.com.tw">google</a>
+    <a href="https://www.nutc.edu.tw/" target="_blank">國立台中科技大學</a>
+    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
+    <a href="#up">錨點</a>
+    <hr>
+    <h2>圖片(img)</h2>
+    <img src="https://cdn-icons-png.flaticon.com/512/2602/2602414.png" width="100" height="100" alt="">
+    <img src="school.jpg" width="200" height="200" alt="">
+    <hr>
+    <h2>列表(ul ol)</h2>
+    <ul type="circle">
+        <li>a</li>
+        <li>b</li>
+        <li>c</li>
+    </ul>
+    <ol type="1">
+        <li>a</li>
+        <li>b</li>
+        <li>c</li>
+    </ol>
+    <dl>
+        <dt>座號</dt>
+        <dd>38</dd>
+        <dt>名字</dt>
+        <dd>吳仲涵</dd>
+    </dl>
 </body>
 </html>
