--- a/demo.html
+++ b/demo.html
@@ -62,5 +62,56 @@
         <dt>名字</dt>
         <dd>吳仲涵</dd>
     </dl>
+    <hr>
+    <h2>輸入(input)</h2>
+    輸入框:<input type="text" value="S3111110138">
+    <br>
+    密碼:<input type="password">
+    <br>
+    數字:<input type="number" min="1" max="100">
+    <br>
+    複選(checkbox) <br>
+    興趣:
+    <input type="checkbox">運動
+    <input type="checkbox" checked>看電影
+    <input type="checkbox">唱歌
+    <input type="checkbox" checked>購物
+    <input type="checkbox" disabled>閱讀
+    <br>
+    單選(radio) <br>
+    性別:
+    女生<input type="radio" name="sex">
+    男生<input type="radio" name="sex">
+    不方便透漏<input type="radio" name="sex">
+    <br>
+    按鈕(button)
+    <input type="button" value="登入">
+    <input type="submit" value="登入">
+    <button>
+        <img src="school.jpg" width="15" height="15" alt="">
+        登入
+    </button>
+    <br>
+    日期(date)
+    <input type="date" min="2023-03-31" max="2023-05-31">
+    <br>
+    時間(time)
+    <input type="time" value="09:00">
+    <br>
+    檔案上傳(file)
+    <input type="file" accept="image/*">
+    <br>
+    文章(textarea)
+    <textarea cols="10" rows="5"></textarea>
+    <br>
+    下拉式選單(select)
+    <select>
+        <option>博士</option>
+        <option>研究所</option>
+        <option>大學</option>
+        <option>高中</option>
+        <option>國中</option>        
+    </select>
+    <input>    
 </body>
 </html>
