--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <a href="demo.html">元件練習</a>
     <br>
     <a href="table.html">表格練習</a>
+    <br>
+    <a href="one.html">考試1</a>
+    <br>
+    <a href="two.html">考試2</a>
 </body>
 </html>
