--- a/two.html
+++ b/two.html
@@ -7,34 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1" width="300" align="center">
+    <table border="1" width="500" align="center">
         <tr>
-            <td colspan="4" align="center">購物車</td>
+            <td colspan="3" align="center">我的個人資料</td>
         </tr>
     <tr>
-        <td rowspan="2">名稱</td>
-        <td colspan="2">2021-11-02</td>
-        <td rowspan="2">小計</td>
+        <td align="center">班級</td>
+        <td>商經一8</td>
+        <td width="200" rowspan="7"><img src="http://fakeimg.pl/200x200/00CED1" alt=""></td>
     </tr>
     <tr>
-        <td>重量</td>
-        <td>單價</td>
+        <td align="center">姓名</td>
+        <td>吳仲涵</td>
     </tr>
     <tr>
-        <td>蘋果</td>
-        <td>3公斤</td>
-        <td>5元/公斤</td>
-        <td>15元</td>
+        <td align="center">學號</td>
+        <td>3111110138</td>
     </tr>
     <tr>
-        <td>芭樂</td>
-        <td>10公斤</td>
-        <td>2元/公斤</td>
-        <td>20元</td>
+        <td align="center">就讀學校</td>
+        <td><a href="https://www.nutc.edu.tw/">國立台中科技大學</a></td>
     </tr>
     <tr>
-        <td colspan="3">總計</td>
-        <td>35元</td>
+        <td rowspan="3" align="center">專長</td>
+        <td >網頁設計</td>
+    </tr>
+    <tr>
+        <td >金融商品與投資</td>
+    </tr>
+    <tr>
+        <td >企業概論</td>
     </tr>
 </table>
 </body>
