--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>
         吳仲涵<br>
         3111110138
     </h1>
     <hr>
+    <!-- HOLLE -->
     <a href="demo.html">元件練習</a>
     <br>
     <a href="table.html">表格練習</a>
     <br>
-    <a href="one.html">考試1</a>
-    <br>
-    <a href="two.html">考試2</a>
-    <br>
     <a href="css.html">css選擇器</a>
+    <br>
+    <a href="background.html">css背景</a>
+    <br>
+    <a href="css_all.html">css全部</a>
+
+
 </body>
+
 </html>
